--- a/main.html
+++ b/main.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+<p><b>Welcome to the world of Web development
 	
 
 
     <script type="text/javascript" src="./script.js">
-</script>
+	</b></p>
+	</script>
 
 </body>
 
