--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-<p><b>Welcome to the world of Web development
+<p>Welcome to the world of Web development
 	
 
 
     <script type="text/javascript" src="./script.js">
-	</b></p>
+	</p>
 	</script>
 
 </body>
