--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-<p>Welcome to the world of Web development
+<div><p>Welcome to the world of Web development </p></div>
 	
 
 
     <script type="text/javascript" src="./script.js">
-	</p>
+	
 	</script>
 
 </body>
